<resources>
    <string name="app_name" translatable="false">MikuBox</string>
    <string name="app_name_long" translatable="false">MikuBox for Android</string>
    <string name="app_desc">The universal proxy toolchain for Android, written in Kotlin.</string>
    <string name="project">Project</string>
    <string name="github">Source code</string>
    <string name="telegram">Telegram update channel</string>
    <string name="oss_licenses">Open source licenses</string>
    <string name="app_version">Version</string>
    <string name="version_x">Version (%s)</string>
    <string name="logcat">Export debug information</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_group">Group</string>
    <string name="menu_about">About</string>
    <string name="theme">Theme Color</string>
    <string name="document">Document</string>
    <string name="group_default">Ungrouped</string>
    <string name="quick_toggle">Toggle</string>
    <string name="tile_title">Switcher</string>
    <string name="menu_traffic">Traffic</string>
    <string name="menu_dashboard">sing-box Dashboard</string>
    <string name="action_copy">Copy</string>
    <string name="action_open">Open</string>
    <string name="group_name">Group name</string>
    <string name="group_update" formatted="false">Update</string>
    <string name="group_subscription_link">Subscription Link</string>
    <string name="group_name_required">Group name required</string>
    <string name="group_create">Create group</string>
    <string name="group_create_subscription">Create subscription</string>
    <string name="update_all_subscription">Update all subscriptions</string>
    <string name="group_edit">Edit group</string>
    <string name="group_edit_subscription">Edit subscription</string>
    <string name="group_status_empty">Empty group</string>
    <string name="group_status_empty_subscription">Not updated yet</string>
    <string name="group_status_proxies">%d Proxies</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="action_socks" translatable="false">SOCKS</string>
    <string name="action_http" translatable="false">HTTP</string>
    <string name="action_shadowsocks" translatable="false">Shadowsocks</string>
    <string name="action_vmess" translatable="false">VMess</string>
    <string name="action_trojan" translatable="false">Trojan</string>
    <string name="action_trojan_go" translatable="false">Trojan Go</string>
    <string name="action_mieru" translatable="false">Mieru</string>
    <string name="action_naive" translatable="false">Naïve</string>
    <string name="action_anytls" translatable="false">AnyTLS</string>
    <string name="action_hysteria" translatable="false">Hysteria</string>
    <string name="action_ssh" translatable="false">SSH</string>
    <string name="action_wireguard" translatable="false">WireGuard</string>
    <string name="action_tuic" translatable="false">TUIC</string>
    <string name="action_juicity" translatable="false">Juicity</string>
    <string name="proxy_chain">Proxy Chain</string>
    <string name="custom_config">Custom Config</string>
    <string name="action_import">Import from Clipboard</string>
    <string name="action_import_file">Import from file</string>
    <string name="delete">Remove</string>
    <string name="add_profile_methods_scan_qr_code">Scan QR code</string>
    <string name="add_profile_methods_manual_settings">Manual Settings</string>
    <string name="apply">Apply</string>
    <string name="night_mode">Night Mode</string>
    <string name="clear_traffic_statistics">Clear traffic statistics</string>
    <string name="connection_test_clear_results">Clear test results</string>
    <string name="connection_test_tcp_ping" translatable="false">TCPing</string>
    <string name="connection_test_url_test" translatable="false">URL Test</string>
    <string name="group_order">Order</string>
    <string name="group_order_origin">Origin</string>
    <string name="group_order_by_name">By Name</string>
    <string name="group_order_by_delay">By Delay</string>
    <string name="connection_test_delete_unavailable">Clear unavailable</string>
    <string name="move">Move</string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="show_bottom_bar">Show bottom bar like SagerNet</string>
    <string name="custom_outbound_json">Custom outbound JSON</string>
    <string name="custom_config_json">Custom config JSON</string>
    <string name="action_shadowtls" translatable="false">ShadowTLS</string>
    <string name="remove_duplicate">Remove duplicate servers</string>
    <string name="update_current_subscription">Update current Group\'s subscription</string>
    <string name="language">Language</string>
    <string name="fab_style">Floating action button style</string>
    <string name="pref_dynamic_theme_title">Use Dynamic Theme</string>
    <string name="pref_dynamic_theme_summary">Use dynamic colors according to the wallpaper (Material You)</string>
    <string name="update">Update</string>
    <string name="pref_font_bold_title">Use Bold Text</string>
    <string name="pref_font_bold_summary">Display all text using a bold typeface.</string>
    <string name="pref_true_black_title">Use the pitch black theme (AMOLED)</string>
    <string name="pref_true_black_summary">Use a pure black background when night mode is enabled.</string>
    <string name="sound_connect_title">VPN connection sound</string>
    <string name="sound_connect_summary">Play sound when VPN connected or disconnected</string>
    <string name="pref_custom_dpi">Set the application DPI manually</string>
    <string name="pref_custom_dpi_dialog_massage">200-500 (Long press preference to reset DPI to system default)</string>
    <string name="banner_home_title">Show home banner</string>
    <string name="banner_home_summary">Hide or show banner on homepage</string>
    <string name="pref_show_splash_title">Show splash screen</string>
    <string name="pref_show_splash_summary">Show splash screen when application is run</string>
    <string name="ip_info_bottom_bar_title">Check IP on connection test</string>
    <string name="ip_info_bottom_bar_summary">Also show public IP, country, and flag when tapping the bottom bar</string>
    <string name="ip_info_show_ip_in_two_line_summary">Displays IP info results in the second line (above latency) during connection tests</string>
    <string name="ip_info_show_ip_in_two_line_title">Display IP Info in Separate Line</string>
    <string name="theme_category">Theme</string>
    <string name="bottom_bar_category">Bottom bar</string>
    <string name="opsional_category">Opsional</string>
    <string name="category_style_title">Preference category title style</string>
    <string name="show_weather_info">Show weather info</string>
    <string name="show_weather_info_summary">Shows current weather in the greeting text</string>
    <string name="category_weather">Weather</string>
    <string name="weather_manual_mode">Use manual location</string>
    <string name="weather_manual_summary">If enabled, use city name instead of GPS</string>
    <string name="weather_city">City name</string>
    <string name="weather_city_dialog">Enter city name (example: Tokyo, Jakarta, Beijing)</string>
    <string name="show_weather_condition">Show weather condition</string>
    <string name="show_weather_condition_summary">Show prefix text and weather condition description</string>
    <string name="profile_name_custom_title">Header name</string>
    <string name="profile_name_custom_dialog">Change display name</string>
    <string name="cardview_category">Custom preference</string>
    <string name="cardview_icon_title">Icon</string>
    <string name="cardview_icon_summary">Hide icon in preference</string>
    <string name="cardview_summary_title">Summary</string>
    <string name="cardview_summary_summary">Hide summary in preference</string>
    <string name="cardview_arrow_title">Arrow icon</string>
    <string name="cardview_arrow_summary">Hide arrow icon in preference</string>
    <string name="cardview_icon_profile_server_title">Icon profile server</string>
    <string name="cardview_icon_profile_server_summary">Hide icon in profile server</string>
    <string name="banner_home_category">Banner home</string>
    <string name="banner_sheet_category">Banner bottomsheet</string>
    <string name="banner_preference_category">Banner preference</string>
    <string name="banner_custom_sheet_title">Change banner image bottomsheet</string>
    <string name="banner_custom_sheet_summary">Select an image from the gallery for the banner bottomsheet</string>
    <string name="delete_custom_banner_sheet">Delete custom banner bottomsheet</string>
    <string name="delete_custom_banner_sheet_summary">Revert to default banner bottomsheet</string>
    <string name="banner_custom_preference_title">Change banner image preference</string>
    <string name="banner_custom_preference_summary">Select an image from the gallery for the banner preference</string>
    <string name="delete_custom_banner_preference">Delete custom banner preference</string>
    <string name="delete_custom_banner_preference_summary">Revert to default banner preference</string>
    <string name="banner_height_title">Banner height</string>
    <string name="banner_height_summary">Set homepage banner height (in dp). Default: 100</string>
    <string name="banner_custom_title">Change banner image</string>
    <string name="banner_custom_summary">Select an image from the gallery for the homepage banner</string>
    <string name="banner_profile_category">Profile</string>
    <string name="banner_profile_custom_title">Change profile banner</string>
    <string name="banner_profile_custom_summary">Choose a custom image for the profile header</string>
    <string name="delete_custom_banner">Delete custom banner</string>
    <string name="delete_custom_banner_summary">Revert to default banner</string>
    <string name="delete_custom_banner_profile">Delete custom profile banner</string>
    <string name="delete_custom_banner_profile_summary">Revert to default profile banner</string>
    <string name="hide_weather_city">Hide city name</string>
    <string name="hide_weather_city_summary">Hide the city location in weather info</string>
    <string name="update_summary">"Let's update MikuBox master!"</string>
    <string name="title_show_welcome_anim">Heart Animation</string>
    <string name="summary_show_welcome_anim">Show Lottie animation on app launch</string>
    <string name="title_show_banner_preference">Show Preference Banner</string>
    <string name="summary_show_banner_preference">Show or hide the banner on the preference page</string>
    <string name="pref_font_style_title">Change Font Style</string>
    <string name="pref_font_scale_title">Change Font Size</string>
    <string name="pref_font_scale_summary">Tap to reset to default font size</string>
    <string name="display_category">Display</string>
    <string name="profile_shape_title"> Banner profile shape</string>
    <string name="preference_shape_title">Icon shape</string>
    <string name="pref_disable_bottom_sheet_fragment_title">Disable bottomsheet in fragment</string>
    <string name="pref_disable_bottom_sheet_home_title">Disable bottomsheet in homepage</string>
    <string name="pref_disable_bottom_sheet_summary">Use standard toolbar menu instead of bottomsheet</string>
    <string name="disable_particles_title">Disable particles animation</string>
    <string name="disable_particles_sheet_summary">Hide particle effects in the bottomsheet</string>
    <string name="disable_particles_pref_summary">Hide particle effects in the preference</string>
    <string name="uwu_banner_title">master</string>
    <string name="uwu_theme_settings_summary">Choose the accent color yourself</string>
</resources>