<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <moe.matsuri.nb4a.ui.CustomBannerPreference
        android:layout="@layout/uwu_banner_theme"
        app:key="key_check_update"
        android:title="@string/update"
        android:summary="@string/update_summary"
        app:icon="@drawable/ic_update" />    

    <PreferenceCategory
        app:title="@string/theme_category">

        <moe.matsuri.nb4a.ui.ColorPickerPreference
            android:layout="@layout/uwu_top_switch"
            app:key="appTheme"
            android:title="@string/theme"
            app:summary="@string/uwu_theme_settings_summary"
            app:icon="@drawable/ic_baseline_color_lens_24" />

        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:key="dynamic_theme_switch"
            android:title="@string/pref_dynamic_theme_title"
            android:summary="@string/pref_dynamic_theme_summary"
            android:defaultValue="false"
            app:icon="@drawable/ic_toggle_switch" />

        <com.takisoft.preferencex.SimpleMenuPreference
            android:layout="@layout/uwu_mid"
            app:key="nightTheme"
            app:title="@string/night_mode"
            app:defaultValue="0"
            app:entries="@array/night_mode"
            app:entryValues="@array/int_array_4"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_baseline_wb_sunny_24" />

        <SwitchPreference
            android:layout="@layout/uwu_bot_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:key="true_dark_enabled"
            android:title="@string/pref_true_black_title"
            android:summary="@string/pref_true_black_summary"
            android:defaultValue="false"
            app:icon="@drawable/ic_toggle_switch" />
            
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/display_category">
        
        <com.takisoft.preferencex.SimpleMenuPreference
            android:layout="@layout/uwu_top"
            android:key="app_font_pref"
            android:title="@string/pref_font_style_title"
            android:defaultValue="default"
            android:entries="@array/app_font_entries"
            android:entryValues="@array/app_font_values"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_format_font" />

        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:key="bold_font_switch"
            android:title="@string/pref_font_bold_title"
            android:summary="@string/pref_font_bold_summary"
            android:defaultValue="false"
            app:icon="@drawable/ic_format_bold" />
            
       <SeekBarPreference
            android:layout="@layout/uwu_mid_seekbar"
            app:key="app_font_scale"
            android:title="@string/pref_font_scale_title"
            android:summary="@string/pref_font_scale_summary"
            app:defaultValue="100"
            app:min="50"
            android:max="150"
            app:showSeekBarValue="true" 
            android:icon="@drawable/ic_format_size" />
            
        <moe.matsuri.nb4a.ui.DpiEditTextPreference
            android:layout="@layout/uwu_bot"
            app:key="custom_dpi"
            app:title="@string/pref_custom_dpi"
            android:inputType="number"
            app:defaultValue="0"
            app:dialogMessage="@string/pref_custom_dpi_dialog_massage"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_cellphone_screenshot" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/opsional_category">

        <SwitchPreference
            android:layout="@layout/uwu_top_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:key="sound_connect"
            android:title="@string/sound_connect_title"
            android:summary="@string/sound_connect_summary"
            android:defaultValue="true"
            app:icon="@drawable/ic_audio" />

        <com.takisoft.preferencex.SimpleMenuPreference
            android:layout="@layout/uwu_mid"
            app:key="app_language"
            app:title="@string/language"
            app:defaultValue=""
            app:entries="@array/language_entry"
            app:entryValues="@array/language_value"
            app:isPreferenceVisible="true"
            app:icon="@drawable/ic_baseline_translate_24" />

        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:key="show_splash_screen"
            android:title="@string/pref_show_splash_title"
            android:summary="@string/pref_show_splash_summary"
            android:defaultValue="true"
            app:icon="@drawable/ic_toggle_switch" />

        <SwitchPreference
            android:layout="@layout/uwu_bot_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:key="key_show_welcome_anim"
            android:title="@string/title_show_welcome_anim"
            android:summary="@string/summary_show_welcome_anim"
            android:defaultValue="true"
            app:icon="@drawable/ic_heart" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/banner_home_category">

        <SwitchPreference
            android:layout="@layout/uwu_top_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:key="show_banner_layout"
            android:title="@string/banner_home_title"
            android:summary="@string/banner_home_summary"
            android:defaultValue="true"
            app:icon="@drawable/ic_toggle_switch" />

        <EditTextPreference
            android:layout="@layout/uwu_mid"
            android:key="banner_height"
            android:title="@string/banner_height_title"
            android:summary="@string/banner_height_summary"
            android:inputType="number"
            app:defaultValue="100"
            app:dependency="show_banner_layout"
            app:icon="@drawable/ic_arrow_up_down_bold_outline" />

        <Preference
            android:layout="@layout/uwu_mid"
            android:key="action_change_banner_image"
            android:title="@string/banner_custom_title"
            android:summary="@string/banner_custom_summary"
            app:dependency="show_banner_layout"
            app:icon="@drawable/ic_image_area" />

        <Preference
            android:layout="@layout/uwu_bot"
            app:key="action_delete_banner_image"
            app:title="@string/delete_custom_banner"
            app:summary="@string/delete_custom_banner_summary"
            app:dependency="show_banner_layout"
            app:icon="@drawable/ic_action_delete" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/banner_sheet_category">
        
        <SwitchPreference
            android:layout="@layout/uwu_top_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:key="disable_bottom_sheet"
            android:title="@string/pref_disable_bottom_sheet_fragment_title"
            android:summary="@string/pref_disable_bottom_sheet_summary"
            android:defaultValue="false"
            app:icon="@drawable/ic_toggle_switch" />
            
        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:key="disable_bottom_sheet_home"
            android:title="@string/pref_disable_bottom_sheet_home_title"
            android:summary="@string/pref_disable_bottom_sheet_summary"
            android:defaultValue="false"
            app:icon="@drawable/ic_toggle_switch" />
            
       <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:key="disable_particles_sheet"
            android:title="@string/disable_particles_title"
            android:summary="@string/disable_particles_sheet_summary"
            android:defaultValue="false"
            app:icon="@drawable/ic_toggle_switch" />

        <Preference
            android:layout="@layout/uwu_mid"
            android:key="action_change_sheet_banner_image"
            android:title="@string/banner_custom_sheet_title"
            android:summary="@string/banner_custom_sheet_summary"
            app:icon="@drawable/ic_image_area" />

        <Preference
            android:layout="@layout/uwu_bot"
            app:key="action_delete_sheet_banner_image"
            app:title="@string/delete_custom_banner_sheet"
            app:summary="@string/delete_custom_banner_sheet_summary"
            app:icon="@drawable/ic_action_delete" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/banner_preference_category">

        <SwitchPreference
            android:layout="@layout/uwu_top_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:key="show_banner_preference"
            android:title="@string/title_show_banner_preference"
            android:summary="@string/summary_show_banner_preference"
            android:defaultValue="true"
            app:icon="@drawable/ic_toggle_switch" />
            
       <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:key="disable_particles_pref"
            android:title="@string/disable_particles_title"
            android:summary="@string/disable_particles_pref_summary"
            android:defaultValue="false"
            app:dependency="show_banner_preference"
            app:icon="@drawable/ic_toggle_switch" />

        <Preference
            android:layout="@layout/uwu_mid"
            android:key="action_change_preference_banner_image"
            android:title="@string/banner_custom_preference_title"
            android:summary="@string/banner_custom_preference_summary"
            app:dependency="show_banner_preference"
            app:icon="@drawable/ic_image_area" />

        <Preference
            android:layout="@layout/uwu_bot"
            app:key="action_delete_preference_banner_image"
            app:title="@string/delete_custom_banner_preference"
            app:summary="@string/delete_custom_banner_preference_summary"
            app:dependency="show_banner_preference"
            app:icon="@drawable/ic_action_delete" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/banner_profile_category">

        <EditTextPreference
            android:layout="@layout/uwu_top"
            app:key="custom_profile_name"
            app:title="@string/profile_name_custom_title"
            app:defaultValue="@string/uwu_banner_title"
            app:dialogMessage="@string/profile_name_custom_dialog"
            app:icon="@drawable/ic_image_edit" />
        
        <com.takisoft.preferencex.SimpleMenuPreference
             android:layout="@layout/uwu_mid"
             app:key="profile_banner_shape"
             app:title="@string/profile_shape_title"
             app:summary="%s"
             app:defaultValue="uwu_shape_cookie"
             app:entries="@array/shape_entries"
             app:entryValues="@array/shape_values"
             app:icon="@drawable/ic_shape_outline" />
             
        <Preference
            android:layout="@layout/uwu_mid"
            android:key="action_change_profile_banner_image"
            android:title="@string/banner_profile_custom_title"
            android:summary="@string/banner_profile_custom_summary"
            app:icon="@drawable/ic_image_area" />

        <Preference
            android:layout="@layout/uwu_bot"
            app:key="action_delete_profile_banner_image"
            app:title="@string/delete_custom_banner_profile"
            app:summary="@string/delete_custom_banner_profile_summary"
            app:icon="@drawable/ic_action_delete" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/cardview_category">

        <SwitchPreference
            android:layout="@layout/uwu_top_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:key="uwu_icon"
            android:title="@string/cardview_icon_title"
            android:summary="@string/cardview_icon_summary"
            android:defaultValue="false"
            app:icon="@drawable/ic_toggle_switch" />

        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:key="uwu_icon_profile_server"
            android:title="@string/cardview_icon_profile_server_title"
            android:summary="@string/cardview_icon_profile_server_summary"
            android:defaultValue="false"
            app:icon="@drawable/ic_toggle_switch" />

        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            app:key="uwu_summary"
            app:title="@string/cardview_summary_title"
            app:summary="@string/cardview_summary_summary"
            app:defaultValue="false"
            app:icon="@drawable/ic_toggle_switch" />

        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            app:key="uwu_arrow"
            app:title="@string/cardview_arrow_title"
            app:summary="@string/cardview_arrow_summary"
            app:defaultValue="false"
            app:icon="@drawable/ic_toggle_switch" />
            
       <com.takisoft.preferencex.SimpleMenuPreference
             android:layout="@layout/uwu_mid"
             app:key="preference_icon_shape"
             app:title="@string/preference_shape_title"
             app:summary="%s"
             app:defaultValue="uwu_shape_cookie"
             app:entries="@array/shape_entries"
             app:entryValues="@array/shape_values"
             app:icon="@drawable/ic_shape_outline" />
            
       <com.takisoft.preferencex.SimpleMenuPreference
            android:layout="@layout/uwu_bot"
            android:key="key_category_style_menu"
            android:title="@string/category_style_title"
            android:defaultValue="style1"
            app:entries="@array/style_category_entries"
            app:entryValues="@array/style_category_values"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_shape_outline" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/category_weather">

        <SwitchPreference
            android:layout="@layout/uwu_top_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:key="show_weather_info"
            android:title="@string/show_weather_info"
            android:summary="@string/show_weather_info_summary"
            android:defaultValue="false"
            app:icon="@drawable/ic_weather_cloudy" />

        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            app:key="manual_weather_enabled"
            app:title="@string/weather_manual_mode"
            app:summary="@string/weather_manual_summary"
            app:defaultValue="false"
            app:dependency="show_weather_info"
            app:icon="@drawable/ic_map_marker_outline" />

        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:key="manual_weather_city"
            app:title="@string/weather_city"
            app:dialogMessage="@string/weather_city_dialog"
            app:dependency="manual_weather_enabled"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_city" />

        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            app:key="show_weather_condition"
            app:title="@string/show_weather_condition"
            app:summary="@string/show_weather_condition_summary"
            app:defaultValue="true"
            app:dependency="show_weather_info"
            app:icon="@drawable/ic_toggle_switch" />

        <SwitchPreference
            android:layout="@layout/uwu_bot_switch"
            android:widgetLayout="@layout/uwu_switch"
            app:key="hide_weather_city"
            app:title="@string/hide_weather_city"
            app:summary="@string/hide_weather_city_summary"
            app:defaultValue="false"
            app:dependency="show_weather_info"
            app:icon="@drawable/ic_city" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/bottom_bar_category">

        <SwitchPreference
            android:layout="@layout/uwu_top_switch"
            android:widgetLayout="@layout/uwu_switch"
            app:key="showBottomBar"
            app:title="@string/show_bottom_bar"
            android:summaryOn="@string/on"
            android:summaryOff="@string/off"
            app:icon="@drawable/ic_toggle_switch" />

        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:key="connection_test_with_ip"
            android:title="@string/ip_info_bottom_bar_title"
            android:summary="@string/ip_info_bottom_bar_summary"
            android:defaultValue="false"
            app:icon="@drawable/ic_ip_info" />

        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:key="show_ip_in_two_line"
            android:title="@string/ip_info_show_ip_in_two_line_title"
            android:summary="@string/ip_info_show_ip_in_two_line_summary"
            android:defaultValue="false"
            app:dependency="connection_test_with_ip"
            app:icon="@drawable/ic_toggle_switch" />

        <com.takisoft.preferencex.SimpleMenuPreference
            android:layout="@layout/uwu_bot"
            app:key="fab_style"
            app:title="@string/fab_style"
            app:defaultValue="1"
            app:entries="@array/fab_style_entry"
            app:entryValues="@array/int_array_2"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_service_busy" />

    </PreferenceCategory>

</PreferenceScreen>
