<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_update_subscription" android:title="@string/update_current_subscription" />
    <item android:id="@+id/action_connection_tcp_ping" android:title="@string/connection_test_tcp_ping" />
    <item android:id="@+id/action_connection_url_test" android:title="@string/connection_test_url_test" />
    <item android:id="@+id/action_clear_traffic_statistics" android:title="@string/clear_traffic_statistics" />
    <item android:id="@+id/action_connection_test_clear_results" android:title="@string/connection_test_clear_results" />
    <item android:id="@+id/action_connection_test_delete_unavailable" android:title="@string/connection_test_delete_unavailable" />
    <item android:id="@+id/action_remove_duplicate" android:title="@string/remove_duplicate" />
    
    <item android:title="@string/group_order">
        <menu>
        	<group android:checkableBehavior="single">
            <item android:id="@+id/action_order_origin" android:title="@string/group_order_origin" />
            <item android:id="@+id/action_order_by_name" android:title="@string/group_order_by_name" />
            <item android:id="@+id/action_order_by_delay" android:title="@string/group_order_by_delay" />
            </group>
        </menu>
    </item>
</menu>