<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_apply"
        android:icon="@drawable/ic_action_done"
        android:title="@string/apply"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_move"
        android:title="@string/move"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_create_shortcut"
        android:title="@string/create_shortcut"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_custom_outbound_json"
        android:title="@string/custom_outbound_json"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_custom_config_json"
        android:title="@string/custom_config_json"
        app:showAsAction="never" />
        
</menu>
